[gd_scene load_steps=74 format=3 uid="uid://bo0vn1x8dpsfe"]

[ext_resource type="Script" uid="uid://bgn2un525vayh" path="res://enemy/slasher/enemy.gd" id="1_gbhi2"]
[ext_resource type="Texture2D" uid="uid://dfdvayqy3jk5c" path="res://assets/enemy/slasher/idle.png" id="2_wi76p"]
[ext_resource type="Shader" uid="uid://ix5hd8ouejhu" path="res://enemy/hitShader.gdshader" id="2_xxny7"]
[ext_resource type="Texture2D" uid="uid://gmg84k6nfrbj" path="res://assets/enemy/slasher/attack_left2.png" id="3_1npk0"]
[ext_resource type="BehaviorTree" uid="uid://bydt1cu64pyu2" path="res://ai/trees/enemy1.tres" id="3_rxslk"]
[ext_resource type="Texture2D" uid="uid://p6n5u1mgeys7" path="res://assets/enemy/slasher/attack_right2.png" id="4_0qlqf"]
[ext_resource type="Texture2D" uid="uid://k00yj0vcoae0" path="res://assets/enemy/slasher/walk_left.png" id="5_idpw5"]
[ext_resource type="Texture2D" uid="uid://bgi0i8htnrml7" path="res://assets/enemy/slasher/walk_right.png" id="6_1th4o"]
[ext_resource type="Texture2D" uid="uid://c2nrn85fdp3by" path="res://assets/enemy/slasher/roll.png" id="6_qfcop"]
[ext_resource type="Texture2D" uid="uid://bl3jjaiixbp4" path="res://assets/enemy/enemy_stun_birds.png" id="9_88y8l"]
[ext_resource type="PackedScene" uid="uid://bl6mp8fxmbsbv" path="res://ui/health_bar.tscn" id="11_e3ssg"]
[ext_resource type="PackedScene" uid="uid://cbu1acdxkc7x" path="res://ui/poise_bar.tscn" id="12_cdie7"]
[ext_resource type="Texture2D" uid="uid://doeqr5frqqfwc" path="res://assets/enemy/enemy_direction_indicator.png" id="13_kife2"]
[ext_resource type="Texture2D" uid="uid://cvocysmfvmi54" path="res://assets/enemy/slasher/attack/indicator/enemy_indicator1.png" id="14_v18kb"]
[ext_resource type="Texture2D" uid="uid://cj0otvnop8o6h" path="res://assets/enemy/slasher/attack/indicator/enemy_indicator2.png" id="15_wkdua"]
[ext_resource type="Texture2D" uid="uid://imhxa21lfrer" path="res://assets/enemy/slasher/attack/indicator/enemy_indicator3.png" id="16_qk2qc"]
[ext_resource type="Texture2D" uid="uid://dc2ir513ky840" path="res://assets/enemy/slasher/attack/indicator/enemy_indicator4.png" id="17_qrim6"]
[ext_resource type="Texture2D" uid="uid://c28jj86bw85wm" path="res://assets/enemy/slasher/attack/indicator/enemy_indicator5.png" id="18_yynyb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c5g5k"]
shader = ExtResource("2_xxny7")
shader_parameter/flash_amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4gs06"]
atlas = ExtResource("3_1npk0")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0egi8"]
atlas = ExtResource("3_1npk0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mx58"]
atlas = ExtResource("3_1npk0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk727"]
atlas = ExtResource("3_1npk0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3wr5"]
atlas = ExtResource("4_0qlqf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnhg4"]
atlas = ExtResource("4_0qlqf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6hof"]
atlas = ExtResource("4_0qlqf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljgtw"]
atlas = ExtResource("4_0qlqf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dct5"]
atlas = ExtResource("2_wi76p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv082"]
atlas = ExtResource("2_wi76p")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_un7b4"]
atlas = ExtResource("2_wi76p")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pv8r"]
atlas = ExtResource("2_wi76p")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0sws"]
atlas = ExtResource("2_wi76p")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm2we"]
atlas = ExtResource("2_wi76p")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o68hq"]
atlas = ExtResource("2_wi76p")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwyr3"]
atlas = ExtResource("2_wi76p")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqouh"]
atlas = ExtResource("6_qfcop")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewpxx"]
atlas = ExtResource("6_qfcop")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_08p1v"]
atlas = ExtResource("6_qfcop")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgn88"]
atlas = ExtResource("6_qfcop")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocxi7"]
atlas = ExtResource("5_idpw5")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mke4f"]
atlas = ExtResource("5_idpw5")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf22v"]
atlas = ExtResource("5_idpw5")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bdfd"]
atlas = ExtResource("5_idpw5")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8urs"]
atlas = ExtResource("5_idpw5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdj32"]
atlas = ExtResource("5_idpw5")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a3kh"]
atlas = ExtResource("5_idpw5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n6x1"]
atlas = ExtResource("5_idpw5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv6a3"]
atlas = ExtResource("6_1th4o")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxbpl"]
atlas = ExtResource("6_1th4o")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdeoo"]
atlas = ExtResource("6_1th4o")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlao5"]
atlas = ExtResource("6_1th4o")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_umyhm"]
atlas = ExtResource("6_1th4o")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t8u7"]
atlas = ExtResource("6_1th4o")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dh0c"]
atlas = ExtResource("6_1th4o")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w8hy"]
atlas = ExtResource("6_1th4o")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_dwchd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gs06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0egi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mx58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk727")
}],
"loop": false,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3wr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnhg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6hof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljgtw")
}],
"loop": false,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dct5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv082")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un7b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pv8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0sws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm2we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o68hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwyr3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqouh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewpxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08p1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgn88")
}],
"loop": true,
"name": &"roll",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocxi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mke4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf22v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bdfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8urs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdj32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a3kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n6x1")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv6a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxbpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdeoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlao5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umyhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t8u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dh0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w8hy")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_c1pwt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animatedSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7bgrk"]
resource_name = "enemy_hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animatedSprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnb4n"]
_data = {
&"RESET": SubResource("Animation_c1pwt"),
&"enemy_hit": SubResource("Animation_7bgrk")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_x51ix"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f156x"]
radius = 3.16228

[sub_resource type="CircleShape2D" id="CircleShape2D_mw23b"]
radius = 66.0

[sub_resource type="BlackboardPlan" id="BlackboardPlan_fyrno"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4p666"]
atlas = ExtResource("9_88y8l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlnvo"]
atlas = ExtResource("9_88y8l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6nbo"]
atlas = ExtResource("9_88y8l")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v873"]
atlas = ExtResource("9_88y8l")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sm3y"]
atlas = ExtResource("9_88y8l")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhro1"]
atlas = ExtResource("9_88y8l")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lai00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p666")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlnvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6nbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v873")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sm3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhro1")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_qxijt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyDirectionIndicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ujavc"]
resource_name = "indicateAttacking"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyDirectionIndicator:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(3.06425, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(7.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsjd6"]
_data = {
&"RESET": SubResource("Animation_qxijt"),
&"indicateAttacking": SubResource("Animation_ujavc")
}

[node name="slasher" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_gbhi2")
hp = 10.0
regain_poise_amount = 1.0
knockback_duration = 0.1

[node name="animatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_c5g5k")
sprite_frames = SubResource("SpriteFrames_dwchd")
animation = &"attack_right"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xnb4n")
}

[node name="movement_CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_x51ix")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
avoidance_enabled = true
radius = 15.0
time_horizon_obstacles = 1.0

[node name="startNav" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_f156x")

[node name="aggroArea" type="Area2D" parent="."]
monitorable = false

[node name="aggroColl" type="CollisionShape2D" parent="aggroArea"]
visible = false
shape = SubResource("CircleShape2D_mw23b")
debug_color = Color(0.996252, 0.503761, 0.671584, 0.42)

[node name="BTPlayer" type="BTPlayer" parent="."]
behavior_tree = ExtResource("3_rxslk")
blackboard_plan = SubResource("BlackboardPlan_fyrno")

[node name="hitStunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="canBeStunnedAgainTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="regainPoiseTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="recentlyHitTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="stunnedBirds" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_lai00")
autoplay = "default"
frame_progress = 0.339284

[node name="healthBar" parent="." instance=ExtResource("11_e3ssg")]
offset_left = -8.0
offset_top = -14.0
offset_right = 8.0
offset_bottom = -12.0

[node name="PoiseBar" parent="." instance=ExtResource("12_cdie7")]
visible = false
offset_left = -8.0
offset_top = -11.0
offset_right = 8.0
offset_bottom = -9.0

[node name="walkIndicator" type="Node2D" parent="."]
visible = false

[node name="EnemyDirectionIndicator" type="Sprite2D" parent="walkIndicator"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("13_kife2")
offset = Vector2(12, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="walkIndicator"]
libraries = {
&"": SubResource("AnimationLibrary_bsjd6")
}

[node name="attackIndicator" type="Node2D" parent="."]
visible = false

[node name="EnemyIndicator1" type="Sprite2D" parent="attackIndicator"]
position = Vector2(5.5, -0.5)
texture = ExtResource("14_v18kb")

[node name="EnemyIndicator2" type="Sprite2D" parent="attackIndicator"]
position = Vector2(7.5, -0.5)
texture = ExtResource("15_wkdua")

[node name="EnemyIndicator3" type="Sprite2D" parent="attackIndicator"]
position = Vector2(9.5, -0.5)
texture = ExtResource("16_qk2qc")
offset = Vector2(0.5, 0)

[node name="EnemyIndicator4" type="Sprite2D" parent="attackIndicator"]
position = Vector2(12.5, -0.5)
texture = ExtResource("17_qrim6")
offset = Vector2(0.5, 0)

[node name="EnemyIndicator5" type="Sprite2D" parent="attackIndicator"]
position = Vector2(17.5, -0.5)
texture = ExtResource("18_yynyb")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="startNav" to="." method="_on_start_nav_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="aggroArea" to="." method="_on_aggro_area_body_entered"]
[connection signal="timeout" from="hitStunTimer" to="." method="_on_hit_stun_timer_timeout"]
[connection signal="timeout" from="regainPoiseTimer" to="." method="_on_regain_poise_timer_timeout"]
